--- a/Q8.html
+++ b/Q8.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Document guvi</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Table-Practice</title>
     <style>
-      table,
-      th,
-      td {
-        border: 1px solid black;
-        border-collapse: collapse;
-        text-align: center;
-        padding: 15px;
-      }
+        table,th,td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            text-align: center;
+            padding: 20px;
+        }
+        .sub{
+            margin-left: 390px;
+            margin-top: 140px;
+        }
     </style>
-  </head>
-  <body>
-      <p>8. Use the table tag to design given image Click here.</p>
-    <table style="border: 1px solid black">
-      <caption>
-        <strong>Health Chart</strong>
-      </caption>
-      <tr>
+</head>
+<body class="sub">
+    
+    <table style="border:2px solid black">
+        <caption><b>Health-Chart</b></caption>
+    <tr>
         <th rowspan="2">State of Health</th>
         <th colspan="2">Fasting Value</th>
         <th>After Eating</th>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>Minimum</td>
         <td>Maximum</td>
         <td>2 hours after eating</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <th>Healthy</th>
         <td>70</td>
         <td>100</td>
         <td>Less than 140</td>
+        
       </tr>
       <tr>
         <th>Pre-Diabets</th>
@@ -47,6 +51,7 @@
         <td>N/A</td>
         <td>More than 200</td>
       </tr>
-    </table>
-  </body>
+
+</table>
+</body>
 </html>
